--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html>
   <head>
-    <title>GDQ Schedule</title>
     <meta charset="utf-8"/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112170621-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-112170621-1');
+    </script>
+    <title>GDQ Schedule</title>
   </head>
   <body>
     <div id="main"></div>
