Change to a consistent font everywhere

--- a/src/dev.html
+++ b/src/dev.html
@@ -3,6 +3,7 @@
   <head>
     <title>GDQ Schedule</title>
     <meta charset="utf-8"/>
+    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   </head>
   <body>
     <div id="main"></div>
