--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       gtag('config', 'UA-112170621-1');
     </script>
     <title>GDQ Schedule</title>
+    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   </head>
   <body>
     <div id="main"></div>
