--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="utf-8"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112170621-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      if (document.location.hostname === "gdq-schedule.com") {
+        var script = document.createElement("script");
+        script.setAttribute("async", "");
+        script.setAttribute("src", "https://www.googletagmanager.com/gtag/js?id=UA-112170621-1");
+        document.head.appendChild(script);
 
-      gtag('config', 'UA-112170621-1');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-112170621-1');
+      }
     </script>
     <title>GDQ Schedule</title>
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
