--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
     </script>
     <title>GDQ Schedule</title>
-    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Muli:400" rel="stylesheet">
   </head>
   <body>
     <div id="main"></div>
